apps/opentelemetry-collector/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-collector
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: opentelemetry-collector
    homelab.local/OwnedBy: ElPoshoX
