apps/opentelemetry-collector/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-collector
  namespace: otel-collector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opentelemetry-collector
    app.kubernetes.io/instance: opentelemetry-collector
  ports:
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
