apps/opentelemetry-collector/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opentelemetry-collector
  namespace: otel-collector
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: ingress
  hostnames:
    - otel.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: opentelemetry-collector-agent
          port: 4318
          weight: 1
